[tool.poetry]
name = "flet-flet-fastapi-fastapi"
version = "0.1.0"
description = ""
authors = ["N-JY <107910868+WarRagon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
